terraform_medcloud_infra/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    "Name" = "${var.project}_vpc"
  }
}

data "aws_availability_zones" "available" {
  state = "available"
}
